# myserver

./: Cargo.toml  README.md  build.rs  docker-compose.yml  makefile
app/: config.json  go.mod  main.go  makefile
app/module/command/: command.go
app/module/config/: config.go
app/module/notify/: notify.go
app/module/remoteshell/: RemoteShell.go
app/module/user/: user.go
app/module/utils/: utils.go
docker/: golang.dockerfile
src/: api_error.rs  command.rs  config.rs  disk.rs  http_user.rs  main.rs  remoteshell.rs  sysstat.rs
