[package]
name = "mynas"
version = "0.1.0"
edition = "2021"

#[target.x86_64-unknown-linux-musl]
#linker = "x86_64-linux-musl-gcc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
lazy_static = "1.4.0"
clap = "2.33"
hyper-router = "0.5.0"
routerify = {version="3.0.0", features=["all"]}
tungstenite = "0.20.1"
tokio-tungstenite = "0.20.1"
hyper-tungstenite = "0.11.1"
futures = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
pty = {version="0.2.2", features=["clippy"]}
nix = {version="0.27.1", features=["term","user", "fs", "env", "process", "mount", "mqueue", "net", "poll", "sched", "kmod", "dir", "signal"]}
futures_codec = "0.4.1"
itoa = "1.0.9"
hyper-staticfile = "0.9.5"
pam = "0.7.0"
passwd-rs = "0.2.0"
pwhash = "1.0.0"
cookie = "0.18.0"
rand = {version="0.8.5", features=["std","std_rng"]}
